# xtts-vastai-deployment

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: app-checkpoint.py  main-checkpoint.py
docs/: api_reference.md  deployment_guide.md  troubleshooting.md  windows_installation.md  windows_setup.md
examples/: kuwaiti_client.py  test_client.py
scripts/: start_server.py
speakers/: README.md
